--- a/package.json
+++ b/package.json
@@ -14,5 +14,22 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "axios": "^1.13.4",
+    "dayjs": "^1.11.19",
+    "decimal.js": "^10.6.0",
+    "pino": "^10.3.0",
+    "technicalindicators": "^3.1.0",
+    "tulind": "^0.8.20",
+    "uuid": "^13.0.0",
+    "ws": "^8.19.0",
+    "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "@types/node": "^25.2.1",
+    "@types/ws": "^8.18.1",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
+  }
 }
