feat: update documentation and enhance logging conventions
- Added a new README.md file providing an overview of the ARES project, including its purpose, project director, modules, and development commands.
- Updated AGENTS.md to include logging conventions with standardized tags for better log management.
- Revised package.json description to reflect the project's focus on WebSocket-first, rule-based crypto futures scalping with strict risk controls.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ares",
   "version": "0.1.0",
   "private": true,
-  "description": "ARES — Automated Risk-controlled Execution Scalper",
+  "description": "ARES is a WebSocket-first, rule-based crypto futures scalping engine for Delta Exchange India, built with strict risk controls, deterministic execution, and production-grade safety systems.",
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/main.ts",
