feat: implement AI veto layer for trade decision-making
- Added AIClient for interfacing with AI providers, supporting both OpenAI and Ollama.
- Introduced AIVetoInput type for structured input to the AI veto process.
- Implemented aiVeto function to analyze trade inputs and determine whether to allow or block trades based on AI responses.
- Created prompt builder for generating AI prompts with specific rules and context.
- Updated documentation in README.md and AGENTS.md to include details about the AI veto layer and its configuration.

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DELTA_BASE_URL=https://api.delta.exchange
 DELTA_WS_URL=wss://socket.delta.exchange
 
 LOG_LEVEL=info
+
+# OpenAI (optional, for AI veto layer)
+OPENAI_API_KEY=
