--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,11 @@ DELTA_WS_URL=wss://socket.delta.exchange
 
 LOG_LEVEL=info
 
+# AI veto layer
+AI_PROVIDER=ollama
+OLLAMA_URL=http://localhost:11434/api/chat
+OLLAMA_MODEL=llama3
+OPENAI_MODEL=gpt-4.1-mini
+
 # OpenAI (optional, for AI veto layer)
 OPENAI_API_KEY=
