feat: update Delta Exchange configuration for India
- Changed default Delta API and WebSocket URLs in .env.example and env.ts to target India production.
- Updated AGENTS.md and README.md to reflect the new default endpoints and provide testnet values for users.

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ TRADING_MODE=paper
 DELTA_API_KEY=your_key_here
 DELTA_API_SECRET=your_secret_here
 
-DELTA_BASE_URL=https://api.delta.exchange
-DELTA_WS_URL=wss://socket.delta.exchange
+DELTA_BASE_URL=https://api.india.delta.exchange
+DELTA_WS_URL=wss://socket.india.delta.exchange
 
 LOG_LEVEL=info
 
