feat: update project documentation and configuration files
- Added new PROJECT_SUMMARY.md and STRATEGIES.md files to provide comprehensive project overviews and strategy templates.
- Enhanced QUICKSTART.md with detailed setup instructions for Delta Exchange account and API credentials.
- Updated .env.example to include optional product selection variables for better configuration.
- Revised README.md to reflect new documentation structure and improve clarity on project features and usage.
- Cleaned up .gitignore by removing unnecessary entries for better maintainability.

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ DELTA_API_SECRET=your_secret_here
 DELTA_BASE_URL=https://api.india.delta.exchange
 DELTA_WS_URL=wss://socket.india.delta.exchange
 
+# Optional: product selection (auto-resolve ID if only symbol is set)
+DELTA_PRODUCT_SYMBOL=BTCUSD
+DELTA_PRODUCT_ID=
+
 LOG_LEVEL=info
 
 # AI veto layer
