refactor: enhance DeltaWsClient and update market data handling in main.ts
- Refactored DeltaWsClient to include an optional onOpen callback for improved connection handling.
- Updated WebSocket message processing in main.ts to support multiple ticker message formats and improved timestamp parsing.
- Enhanced market data ingestion logic to ensure proper handling of price and volume data.
- Added subscription functionality for ticker updates upon WebSocket connection.

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ LOG_LEVEL=info
 # AI veto layer
 AI_PROVIDER=ollama
 OLLAMA_URL=http://localhost:11434/api/chat
-OLLAMA_MODEL=llama3
+OLLAMA_MODEL=llama3.1:8b
 OPENAI_MODEL=gpt-4.1-mini
 
 # OpenAI (optional, for AI veto layer)
