feat: add PAPER_BYPASS_SCORE configuration for paper trading
- Introduced PAPER_BYPASS_SCORE variable in .env.example and updated env.ts to allow bypassing score checks in paper trading mode.
- Modified getRiskContext function in main.ts to log warnings when PAPER_BALANCE is not set in paper mode.
- Enhanced strategy runner to conditionally bypass scoring based on PAPER_BYPASS_SCORE, improving flexibility in paper trading scenarios.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV=development
 TRADING_MODE=paper
 PAPER_BALANCE=10000
+PAPER_BYPASS_SCORE=true
 
 DELTA_API_KEY=your_key_here
 DELTA_API_SECRET=your_secret_here
