feat: enhance WebSocket client and order management for improved trading functionality
- Added authentication support in DeltaWsClient to manage private channels for orders and positions.
- Updated main.ts to handle new WebSocket message types for order and position updates.
- Enhanced order management in PaperExecutor to accurately calculate PnL and manage position sizes during trades.
- Introduced dynamic leverage resolution based on trading symbol in risk management, improving risk assessment accuracy.
- Adjusted PAPER_CONFIG to set partial fill chance to zero, refining paper trading behavior.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch -r dotenv/config src/main.ts",
+    "paper": "tsx -r dotenv/config src/paper/paper.flow.ts",
     "build": "tsc",
     "start": "node dist/main.js",
     "lint": "tsc --noEmit",
