feat: enhance paper trading configuration and risk management
- Added PAPER_MARKET_ENTRY option in .env.example and updated env.ts to allow market entry in paper trading mode.
- Introduced DELTA_PRODUCT_SYMBOLS in .env.example and env.ts for multiple product symbol support.
- Enhanced risk management by adjusting RISK_CONFIG to allow multiple open trades per symbol and increased total open trades.
- Updated order management in PaperExecutor to support market orders and improved handling of last prices for accurate trade execution.
- Refined exposure checks in risk management to account for trades per symbol, enhancing risk assessment accuracy.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV=development
 TRADING_MODE=paper
 PAPER_BALANCE=10000
+PAPER_MARKET_ENTRY=true
 PAPER_BYPASS_SCORE=true
 
 DELTA_API_KEY=your_key_here
@@ -11,6 +12,7 @@ DELTA_WS_URL=wss://socket.india.delta.exchange
 
 # Optional: product selection (auto-resolve ID if only symbol is set)
 DELTA_PRODUCT_SYMBOL=BTCUSD
+DELTA_PRODUCT_SYMBOLS=BTCUSD,ETHUSD,XRPUSD,SOLUSD
 DELTA_PRODUCT_ID=
 
 LOG_LEVEL=info
