feat: enhance paper trading configuration and WebSocket client functionality
- Added PAPER_SIDE option in .env.example and updated env.ts to allow configuration of trade side in paper trading mode.
- Implemented disconnect method in DeltaWsClient for improved WebSocket management.
- Refactored paper trading flow to normalize symbol configurations and handle multiple symbols, enhancing trading flexibility.
- Updated PaperTrader class to manage flow completion and error handling more effectively, improving robustness in trading operations.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ NODE_ENV=development
 TRADING_MODE=paper
 PAPER_BALANCE=10000
 PAPER_MARKET_ENTRY=true
+PAPER_SIDE=buy
 PAPER_BYPASS_SCORE=true
 
 DELTA_API_KEY=your_key_here
