feat: introduce structured logging, refine order placement logic, and update paper trading configuration

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ FORCE_HTF_BIAS=
 # AI veto layer
 AI_PROVIDER=ollama
 OLLAMA_URL=http://localhost:11434/api/chat
-OLLAMA_MODEL=llama3.1:8b
+OLLAMA_MODEL=qwen3:latest
 OPENAI_MODEL=gpt-4.1-mini
 
 # OpenAI (optional, for AI veto layer)
